{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 700,
  "lineage": "156212f0-0006-07f0-c026-a2a213b617d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "kubernetes_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:835708988591:loadbalancer/k8s-elb",
            "availability_zones": [
              "us-east-2a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "desync_mitigation_mode": "defensive",
            "dns_name": "k8s-elb-319016940.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/healthz",
                "timeout": 15,
                "unhealthy_threshold": 2
              }
            ],
            "id": "k8s-elb",
            "idle_timeout": 60,
            "instances": [
              "i-09c4dc4ffcfc76bd9"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "TCP",
                "lb_port": 6443,
                "lb_protocol": "TCP"
              }
            ],
            "name": "k8s-elb",
            "security_groups": [
              "sg-0a2d4625bde9ff077"
            ],
            "source_security_group": "835708988591/kubernetes-api",
            "source_security_group_id": "sg-0a2d4625bde9ff077",
            "subnets": [
              "subnet-00e51000188e5275e"
            ],
            "tags": {
              "Name": "kubernetes",
              "Owner": "Zahid"
            },
            "tags_all": {
              "Name": "kubernetes",
              "Owner": "Zahid"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_iam_instance_profile.kubernetes",
            "aws_iam_role.kubernetes",
            "aws_instance.controller",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07b36ea9852e986ad",
            "arn": "arn:aws:ec2:us-east-2:835708988591:instance/i-09c4dc4ffcfc76bd9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kubernetes",
            "id": "i-09c4dc4ffcfc76bd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k8's-ubuntu-master-node.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef30bb9b5f8e3528",
            "private_dns": "ip-10-43-0-20.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.43.0.20",
            "public_dns": "ec2-18-226-177-72.us-east-2.compute.amazonaws.com",
            "public_ip": "18.226.177.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-078992555c16e51b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-00e51000188e5275e",
            "tags": {
              "Name": "controller-0",
              "Owner": "Zahid",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller0",
              "ansibleNodeType": "controller"
            },
            "tags_all": {
              "Name": "controller-0",
              "Owner": "Zahid",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller0",
              "ansibleNodeType": "controller"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010ec3ac26be5771e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.kubernetes",
            "aws_iam_role.kubernetes",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "etcd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07b36ea9852e986ad",
            "arn": "arn:aws:ec2:us-east-2:835708988591:instance/i-01c33435934c9b19e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c33435934c9b19e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k8's-ubuntu-master-node.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f82ea38dd8412f61",
            "private_dns": "ip-10-43-0-10.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.43.0.10",
            "public_dns": "ec2-18-118-166-155.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.166.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03812e4bde078382c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e51000188e5275e",
            "tags": {
              "Name": "etcd-0",
              "Owner": "Zahid",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "etcd0",
              "ansibleNodeType": "etcd"
            },
            "tags_all": {
              "Name": "etcd-0",
              "Owner": "Zahid",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "etcd0",
              "ansibleNodeType": "etcd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010ec3ac26be5771e"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07b36ea9852e986ad",
            "arn": "arn:aws:ec2:us-east-2:835708988591:instance/i-0fd34e21089576caa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd34e21089576caa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k8's-ubuntu-master-node.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0362deab9c07bef04",
            "private_dns": "ip-10-43-0-30.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.43.0.30",
            "public_dns": "ec2-3-15-235-55.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.235.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a0c859fe79f2fc37",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-00e51000188e5275e",
            "tags": {
              "Name": "worker-0",
              "Owner": "Zahid",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker0",
              "ansibleNodeType": "worker"
            },
            "tags_all": {
              "Name": "worker-0",
              "Owner": "Zahid",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker0",
              "ansibleNodeType": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010ec3ac26be5771e"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835708988591:internet-gateway/igw-047be263a2fb0795f",
            "id": "igw-047be263a2fb0795f",
            "owner_id": "835708988591",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Zahid"
            },
            "tags_all": {
              "Name": "kubernetes",
              "Owner": "Zahid"
            },
            "vpc_id": "vpc-03b4abb4473ecca73"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835708988591:route-table/rtb-0367d4ce5a53872ae",
            "id": "rtb-0367d4ce5a53872ae",
            "owner_id": "835708988591",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047be263a2fb0795f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes",
              "Owner": "Zahid"
            },
            "tags_all": {
              "Name": "kubernetes",
              "Owner": "Zahid"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b4abb4473ecca73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011cb167fe2c9799b",
            "route_table_id": "rtb-0367d4ce5a53872ae",
            "subnet_id": "subnet-00e51000188e5275e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.kubernetes",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835708988591:security-group/sg-010ec3ac26be5771e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010ec3ac26be5771e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.43.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "123.45.67.89/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "123.45.67.89/32"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a2d4625bde9ff077"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kubernetes",
            "name_prefix": "",
            "owner_id": "835708988591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes",
              "Owner": "Zahid"
            },
            "tags_all": {
              "Name": "kubernetes",
              "Owner": "Zahid"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b4abb4473ecca73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kubernetes_api",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835708988591:security-group/sg-0a2d4625bde9ff077",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2d4625bde9ff077",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "kubernetes-api",
            "name_prefix": "",
            "owner_id": "835708988591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-api",
              "Owner": "Zahid"
            },
            "tags_all": {
              "Name": "kubernetes-api",
              "Owner": "Zahid"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b4abb4473ecca73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835708988591:subnet/subnet-00e51000188e5275e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.43.0.0/16",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e51000188e5275e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835708988591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Zahid"
            },
            "tags_all": {
              "Name": "kubernetes",
              "Owner": "Zahid"
            },
            "vpc_id": "vpc-03b4abb4473ecca73"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835708988591:vpc/vpc-03b4abb4473ecca73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.43.0.0/16",
            "default_network_acl_id": "acl-073d8e6c8f7d04bb0",
            "default_route_table_id": "rtb-0d74b1cdc21671a57",
            "default_security_group_id": "sg-00769e6fc6f8814e2",
            "dhcp_options_id": "dopt-0f660c442eda6ddef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b4abb4473ecca73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d74b1cdc21671a57",
            "owner_id": "835708988591",
            "tags": {
              "Name": "K8's-VPC",
              "Owner": "Zahid"
            },
            "tags_all": {
              "Name": "K8's-VPC",
              "Owner": "Zahid"
            }
          }
        }
      ]
    }
  ]
}